use upstream spin and temporarily disable the patched features until they are ported to spin-1.3.0

--- a/queryall-ext-rule-spin/pom.xml
+++ b/queryall-ext-rule-spin/pom.xml
@@ -5,8 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>queryall-parent</artifactId>
-		<groupId>com.github.queryall</groupId>
-		<version>1.3.3-SNAPSHOT</version>
+		<groupId>com.github.ansell.queryall</groupId>
+		<version>1.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>queryall-ext-rule-spin</artifactId>
 	<name>queryall-ext-rule-spin</name>
@@ -21,9 +21,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.topquadrant</groupId>
-			<artifactId>spin-api</artifactId>
-			<version>1.2.1-SNAPSHOT</version>
+			<groupId>org.topbraid</groupId>
+			<artifactId>spin</artifactId>
+			<version>1.3.0</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>slf4j-api</artifactId>
@@ -91,9 +91,23 @@
 			<artifactId>commons-io</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.openjena</groupId>
+			<groupId>com.github.ansell.jenasesame</groupId>
 			<artifactId>sesame-jena</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>0.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+  <repositories>
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <id>org.topbraid</id>
+      <name>TopBraid</name>
+      <url>http://topquadrant.com/repository/spin</url>
+    </repository>
+  </repositories>
+	
 </project>
