--- a/ext/provider/http/pom.xml
+++ b/ext/provider/http/pom.xml
@@ -7,10 +7,9 @@
 		<groupId>com.github.ansell.queryall</groupId>
 		<artifactId>queryall-parent</artifactId>
 		<version>1.4-SNAPSHOT</version>
-		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>queryall-ext-provider-http</artifactId>
-	<name>queryall-ext-provider-http</name>
+	<name>QueryAll Extension :: HTTP Provider</name>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
