--- a/ext/querytype/rdf/pom.xml
+++ b/ext/querytype/rdf/pom.xml
@@ -7,10 +7,9 @@
 		<groupId>com.github.ansell.queryall</groupId>
 		<artifactId>queryall-parent</artifactId>
 		<version>1.4-SNAPSHOT</version>
-		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>queryall-ext-querytype-rdf</artifactId>
-	<name>queryall-ext-querytype-rdf</name>
+	<name>QueryAll Extension :: RDF QueryType</name>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
