--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -6,11 +6,10 @@
         <groupId>com.github.ansell.queryall</groupId>
         <artifactId>queryall-parent</artifactId>
         <version>1.4-SNAPSHOT</version>
-        <relativePath>..</relativePath>
     </parent>
 	<artifactId>queryall-webapp</artifactId>
 	<packaging>jar</packaging>
-	<name>Queryall Webapp library</name>
+	<name>QueryAll :: Base Webapp library</name>
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
