add failsafe configuration and version

--- a/pom.xml
+++ b/pom.xml
@@ -363,6 +363,17 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>2.14.1</version>
+                    <!-- Added test excludes for Abstract -->
+                    <configuration>
+                        <excludes>
+                            <exclude>**/Abstract*</exclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-pmd-plugin</artifactId>
                     <version>2.7.1</version>
                     <configuration>
