update pom.xml files

--- a/lib-test/pom.xml
+++ b/lib-test/pom.xml
@@ -149,6 +149,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
+			<artifactId>sesame-rio-rdfjson</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-rio-n3</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -165,11 +170,6 @@
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-rio-trig</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.github.ansell.sesame-rio-extensions</groupId>
-			<artifactId>sesame-rio-extensions-rdfjson</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
