--- a/ext/rule/spin/pom.xml
+++ b/ext/rule/spin/pom.xml
@@ -7,6 +7,7 @@
 		<artifactId>queryall-parent</artifactId>
 		<groupId>com.github.ansell.queryall</groupId>
 		<version>1.4-SNAPSHOT</version>
+                <relativePath>../../../pom.xml</relativePath>
 	</parent>
 	<artifactId>queryall-ext-rule-spin</artifactId>
 	<name>QueryAll Extension :: SPIN-API Rules</name>
